<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_all_bookings">

    <fragment
        android:id="@+id/navigation_accepted_bookings"
        android:name="com.walkmenuvendor.householdserviceprovider.ui.AcceptedBookingsFragment"
        android:label="@string/title_accepted"
        tools:layout="@layout/fragment_accepted" />

    <fragment
        android:id="@+id/navigation_all_bookings"
        android:name="com.walkmenuvendor.householdserviceprovider.ui.AvailableBookingsFragment"
        android:label="@string/title_available"
        tools:layout="@layout/fragment_available_bookings" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.walkmenuvendor.householdserviceprovider.ui.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>
